--- a/02(CallApp)/index.html
+++ b/02(CallApp)/index.html
@@ -74,7 +74,10 @@
                 <br><br>
 
                 <!-- Submit Button -->
-                <button type="submit">Submit</button>
+               <div id="buttons">
+                 <button type="submit">Submit</button>
+                 <button id="close">Close</button>
+               </div>
 
             </form>
 
