--- a/productivityDashboard/index.html
+++ b/productivityDashboard/index.html
@@ -32,23 +32,42 @@
 
         </section>
         <section class="fullElem todo-list-fullpage">
-            <h1>Todo Page</h1>
             <button class="back">close</button>
+            <h2>Your personalised Task  List</h2>
+            <div class="todo-container">
+                <div class="addTask">
+                    <form >
+                         <input type="text" placeholder="Enter Task" id="addTask">
+                      <textarea name="" id="" placeholder="Enter Details"></textarea>
+                      <div class="mark-imp">
+                          <input type="checkbox" id="check">
+                          <label for="check">Mark as important</label>
+                      </div>
+                      <button id="tskBtn">Add Task</button>
+                    </form>
+                </div>
+                <div class="allTask">
+                    <div class="task">
+                        <h5>Gym Jao</h5>
+                        <button>Mark as completed</button>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="fullElem daily-planner-fullpage">
-            <h1>Daily Planner</h1>
+            <h2>Daily Planner</h2>
             <button class="back">close</button>
         </section>
         <section class="fullElem motivational-fullpage">
-            <h1>Motivational Quote</h1>
+            <h2>Motivational Quote</h2>
             <button class="back">close</button>
         </section>
         <section class="fullElem pomodoro-full-fullpage">
-            <h1>Pomodoro Timer</h1>
+            <h2>Pomodoro Timer</h2>
             <button class="back">close</button>
         </section>
         <section class="fullElem daily-goal-fullpage">
-            <h1>Daily Goals</h1>
+            <h2>Daily Goals</h2>
             <button class="back">close</button>
         </section>
     </div>
