--- a/TodoApp/index.html
+++ b/TodoApp/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="main">
         <h1>To Do App</h1>
         <div class="form">
-            <form >
-                <input type="text" placeholder="Enter Task">
+            <form>
+                <input id="taskInput" type="text" placeholder="Enter Task">
                 <textarea name="" id="details" placeholder="Enter Details"></textarea>
                 <input type="color" id="tskBgColor" value="#f1f2f6">
                 <button id="addTskBtn">Add Task</button>
             </form>
             <div class="allTasks">
-                <div class="task">
-                    <h2>play Cricket <span>imp</span></h2>
-                   <div class="btns">
-                     <button>Details</button>
-                    <button>Completed</button>
-                   </div>
+                <div class="wraper">
+                    <!-- <div class="task">
+                        <h2>play Cricket <span>imp</span></h2>
+                        <div class="btns">
+                            <button class="detailsBtn">Details</button>
+                            <button class="completedBtn">Completed</button>
+                        </div>
+                    </div>
                     <div class="taskDetails">
                         <p>get up early and go to ground</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+     <script src="deepSeek.js"></script>
 </body>
+
 </html>
